fix wait text alignment

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -79,9 +79,10 @@
 }
 
 .wait-text {
+    position: absolute;
     font-size: 20px;
     line-height: 24px;
-    margin-left: 249px;
+    margin-top: 5rem;
 }
 
 .gradient-bg {
